--- a/member.html
+++ b/member.html
@@ -99,7 +99,7 @@
                 <br>
               南半球オゾン場の予測可能性について(廣岡)<br>
             </p>
-            <article>超絶美人なお姉さん</article>
+            <p>超絶美人なお姉さん。</p>
         </div>
         <div class="item">
             <h5>D3 松山裕矢</h5>
@@ -107,7 +107,7 @@
                 <br>
               プラネタリー波の下方伝播について(廣岡)<br>
             </p>
-            <article></article>
+            <p>最強ドクター。数々の受賞歴を持つ。</p>
         </div>
       </div><!-- /.grid -->
 
@@ -118,6 +118,7 @@
             <p>兵庫・白陵高校出身<br>
              <br> 
             ICONの衛星観測による熱圏の風について（Liu）</p>
+            <p>独特な笑い方をする方</p>
         </div>
         <div class="item">
           <h5>喜多川太一</h5>
@@ -125,12 +126,14 @@
               <br>
             残差平均子午面循環の南北両半球の相違とその年々変動について（廣岡）<br>
           </p>
+          <p>よくサーバーを止める方。</p>
         </div>
         <div class="item">
           <h5>佐竹陸</h5>
             <p>東京・都立駒場高校出身<br>
               <br>
             2020年の南極オゾンホールについて（廣岡）<br>
+            <p>シンガーソングライター。</p>
         </div>
         <div class="item">
           <h5>菅田凌生</h5>
@@ -138,12 +141,14 @@
               <br>
             上部成層圏～下部熱圏における東西風変動とQBOの相関について（三好）<br>
           </p>
+          <p>親しみやすさ抜群のマスコットキャラクター。</p>
         </div>
         <div class="item">
           <h5>武田大輝</h5>
             <p>福岡・城南高校出身<br>
               <br>
             2018年12月の成層圏突然昇温と極渦の変化（三好）<br>
+            <p>意外とかわいいもの好き。</p>
         </div>
         <div class="item">
           <h5>永里奈々</h5>
@@ -151,11 +156,13 @@
               <br>
             木星の三層雲構造を破壊する間欠的な積乱雲活動（中島）<br>
           </p>
+          <p>大気の笑い声二大巨頭の一角。</p>
         </div>
         <div class="item">
           <h5>山本桂輔</h5>
             <p>鹿児島・樟南高校出身<br>
             <br>2019年の南半球のおける成層圏突然昇温の影響について（三好）</p>
+            <p>イケメンギタリスト。</p>
         </div>
       </div><!-- /.grid --> 
   
@@ -167,6 +174,7 @@
               <p>神奈川・逗子開成高校出身<br>
               <br>
               夏季中間圏における夜光雲と冬季成層圏循環の関係（三好）</p>
+              <p>さわやかヨット少年。</p>
         </div>
         <div class="item">
             <h5>今田衣美</h5>
@@ -174,6 +182,7 @@
                 <br>
               地面の運動に伴って励起される大気ラム波観測のための微気圧観測システムの開発（中島) <br>
             </p>
+            <p>研究室を癒してくれる女の子。</p>
         </div>
         <div class="item">
           <h5>寺岡宙惟</h5>
@@ -181,6 +190,7 @@
               <br>
             日本上空のスポラディックE層の密度変化（Liu) <br>
           </p>
+          <p>高身長ハンサム担当。</p>
         </div>
         <div class="item">
           <h5>中村遥暉</h5>
@@ -188,6 +198,7 @@
               <br>
             2021年1月に発生した成層圏突然昇温の力学的背景（廣岡）<br>
           </p>
+          <p>現在の管理人</p>
         </div>
       </div><!-- /.grid --> 
 
