--- a/member copy.html
+++ b/member copy.html
@@ -13,6 +13,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="stylesheet" type="text/css" href="style_3.css">
 
+
   </head>
 
   <body>
@@ -20,25 +21,45 @@
     <div id="study" class="big-bg">
 
       <header class="page-header wrapper">
-        <h1><a href="index.html">大気流体力学分野</a></h1>
-        <!-- <h1><a href="http://fx.geo.kyushu-u.ac.jp/">大気流体力学分野</a></h1> -->
 
-        <div class="menu-icon" id="open-nav">
-          <a class="icon">≡</a>
-          <ul class="hidden">
-            <li><a href="index.html">home</a></li>
-            <li><a href="member.html">メンバー</a></li>
-            <li><a href="study_top.html">研究内容</a></li>
-            <li><a href="link.html">リンク集</a></li>
-          </ul>
+        <div class="menu">
+          <h4>大気流体力学</h4>
+          <h1>メンバー</h1>
+          <div class="icon-button">
+            <a id="humburger">≡</a>
+            <span class=" bar bar-top"></span>
+            <span class=" bar bar-mid"></span>
+            <span class=" bar bar-bottom"></span>
+          </div>          
         </div>
-      </header>
   
-      <div class="wrapper">
-        <h2 class="page-title">メンバー</h2>
+      </header>
+
+      <div class="nav-wrapper">
+        <div id="cont-list">
+          <ul class="hidden" id="hidden-id">
+            <li class="hidden-item"><a href="index.html">home</a></li>
+            <li class="hidden-item"><a href="member.html">メンバー</a></li>
+            <li class="hidden-item"><a href="study_top.html">研究内容</a></li>
+            <li class="hidden-item"><a href="link.html">リンク集</a></li>
+          </ul>
+        </div>  
       </div>
 
+      
+      <div class="big-back" id="js-big-back"></div>
+      
+  
     </div><!-- /#home -->
+
+    <!-- <div class="content">
+      <ul class="hidden">
+        <li><a href="index.html">home</a></li>
+        <li><a href="member.html">メンバー</a></li>
+        <li><a href="study_top.html">研究内容</a></li>
+        <li><a href="link.html">リンク集</a></li>
+      </ul>
+    </div> -->
 
     <div id="choice" class="choice-button">
       <h4 class="mem">member contents</h4>
