so no one told you life was ganna be this way~

--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
             <span class="hamb-line hamburger__line--3"></span>
           </div>
           <nav class="sp-nav">
-            <ul class="delayItem">
-              <li><a href="index.html">home</a></li>
+            <ul>
+              <li class="delayItem"><a href="index.html">home</a></li>
                 <p>homeはこちら</p>
-              <li><a href="member.html">メンバー</a></li>
+              <li class="delayItem"><a href="member.html">メンバー</a></li>
                 <p>memberの詳細はこちら</p>
-              <li><a href="study.html">研究内容</a></li>
+              <li class="delayItem"><a href="study.html">研究内容</a></li>
                 <p>大気流体力学についてはこちら</p>
-              <li><a href="link.html">リンク集</a></li>
+              <li class="delayItem"><a href="link.html">リンク集</a></li>
                 <p>お役立ちリンクはこちら</p>
 
             </ul>
@@ -66,13 +66,15 @@
       </div>
     </header>
   </div>
+ <!-- <div class="strato"></div> -->
+
 
  </div>
 
  <div class="home-explain">
    <h2>大気流体力学分野の研究室へようこそ。</h2>
    <p>ここでは、我々の研究室やメンバーの紹介、さらに皆さんの研究、分野配属先決定に役立つ情報を掲載しております。<br>
-  さらに、就活体験記など、お役立ち情報を今後盛りだくさんに追加していくので、ご覧ください。</p>
+  さらに、就活体験記など、お役立ち情報を今後盛りだくさんに追加していくので、ご期待ください。</p>
  </div>
  <div class="back-ground-home"></div>
 
